added genealogyLogLikelihood to calescense trace
next step: fix root_theta

--- a/py/model_comparison.ipynb
+++ b/py/model_comparison.ipynb
@@ -2,22 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.7725887222397811"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
@@ -25,13 +14,12 @@
     "import pandas as pd\n",
     "pd.set_option('display.mpl_style', 'default') \n",
     "pd.set_option('display.width', 5000) \n",
-    "pd.set_option('display.max_columns', 60)\n",
-    "\n"
+    "pd.set_option('display.max_columns', 60)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -39,13 +27,13 @@
    "source": [
     "flat_coalescence_stats = \\\n",
     "    pd.read_csv\\\n",
-    "        ('./Dropbox/Thesis/G-PhoCS/code/G-PhoCS/logs/sample-data.coalStats.tsv',\\\n",
+    "        ('../logs/sample-data.coalStats.tsv',\\\n",
     "         sep='\\t')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -143,13 +131,14 @@
        "4     4      1.649143         7000     0.481082           0  73.801757   -1341877.148806    -1403305.183686 -61428.034880"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flat_coalescence_stats['P_Z_ϴM'] = flat_coalescence_stats['dataLogLikelihood'] - flat_coalescence_stats['genLogLikelihood']\n"
+    "flat_coalescence_stats['P_Z_ϴM'] = flat_coalescence_stats['dataLogLikelihood'] - flat_coalescence_stats['genLogLikelihood']\n",
+    "flat_coalescence_stats[:5]"
    ]
   },
   {
@@ -171,18 +160,34 @@
     }
    ],
    "source": [
-    "np.exp(-62043.527880)\n",
-    "#flat_coalescence_stats[['P_Z_ϴM']].applymap(np.exp)"
+    "flat_coalescence_stats['P_Z_ϴM'] = flat_coalescence_stats['dataLogLikelihood'] - flat_coalescence_stats['genLogLikelihood']\n",
+    "flat_coalescence_stats[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2407.9120511467941"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def P_Z_ϴM0(theta, num_coal, time_stats):\n",
+    "    result = num_coal*np.log(2.0/theta) -(time_stats/theta)\n",
+    "    return result\n",
+    "P_Z_ϴM0(2.82063, 7000, 3.442481)"
+   ]
   }
  ],
  "metadata": {
