- added P_Z_ϴM0 func to python added root_ϴ to coalTrace log

--- a/py/model_comparison.ipynb
+++ b/py/model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -46,127 +46,81 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>iter</th>\n",
-       "      <th>coalStatFlat</th>\n",
-       "      <th>numCoalFlat</th>\n",
-       "      <th>migStatFlat</th>\n",
-       "      <th>numMigFlat</th>\n",
        "      <th>logPrior</th>\n",
-       "      <th>genLogLikelihood</th>\n",
-       "      <th>dataLogLikelihood</th>\n",
+       "      <th>time_stats</th>\n",
+       "      <th>num_coal</th>\n",
+       "      <th>root_ϴ</th>\n",
        "      <th>P_Z_ϴM</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1.537531</td>\n",
+       "      <td>85.995726</td>\n",
+       "      <td>1.490026</td>\n",
        "      <td>7000</td>\n",
-       "      <td>0.425007</td>\n",
-       "      <td>0</td>\n",
-       "      <td>74.406115</td>\n",
-       "      <td>-1345147.508629</td>\n",
-       "      <td>-1407191.036509</td>\n",
-       "      <td>-62043.527880</td>\n",
+       "      <td>0.993342</td>\n",
+       "      <td>-62289.508710</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.567838</td>\n",
+       "      <td>85.943253</td>\n",
+       "      <td>1.540434</td>\n",
        "      <td>7000</td>\n",
-       "      <td>0.434766</td>\n",
-       "      <td>1</td>\n",
-       "      <td>74.244715</td>\n",
-       "      <td>-1343515.398845</td>\n",
-       "      <td>-1405370.041241</td>\n",
-       "      <td>-61854.642396</td>\n",
+       "      <td>1.025140</td>\n",
+       "      <td>-61972.086796</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1.663058</td>\n",
+       "      <td>85.801941</td>\n",
+       "      <td>1.567853</td>\n",
        "      <td>7000</td>\n",
-       "      <td>0.471859</td>\n",
-       "      <td>0</td>\n",
-       "      <td>74.161724</td>\n",
-       "      <td>-1343041.895733</td>\n",
-       "      <td>-1404301.985444</td>\n",
-       "      <td>-61260.089711</td>\n",
+       "      <td>1.027326</td>\n",
+       "      <td>-61752.584457</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1.687391</td>\n",
+       "      <td>85.667683</td>\n",
+       "      <td>1.585372</td>\n",
        "      <td>7000</td>\n",
-       "      <td>0.483050</td>\n",
-       "      <td>2</td>\n",
-       "      <td>73.915479</td>\n",
-       "      <td>-1342439.933576</td>\n",
-       "      <td>-1403587.899880</td>\n",
-       "      <td>-61147.966304</td>\n",
+       "      <td>1.031189</td>\n",
+       "      <td>-61665.005804</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1.649143</td>\n",
+       "      <td>85.426318</td>\n",
+       "      <td>1.717799</td>\n",
        "      <td>7000</td>\n",
-       "      <td>0.481082</td>\n",
-       "      <td>0</td>\n",
-       "      <td>73.801757</td>\n",
-       "      <td>-1341877.148806</td>\n",
-       "      <td>-1403305.183686</td>\n",
-       "      <td>-61428.034880</td>\n",
+       "      <td>1.068754</td>\n",
+       "      <td>-60907.063417</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   iter  coalStatFlat  numCoalFlat  migStatFlat  numMigFlat   logPrior  genLogLikelihood  dataLogLikelihood        P_Z_ϴM\n",
-       "0     0      1.537531         7000     0.425007           0  74.406115   -1345147.508629    -1407191.036509 -62043.527880\n",
-       "1     1      1.567838         7000     0.434766           1  74.244715   -1343515.398845    -1405370.041241 -61854.642396\n",
-       "2     2      1.663058         7000     0.471859           0  74.161724   -1343041.895733    -1404301.985444 -61260.089711\n",
-       "3     3      1.687391         7000     0.483050           2  73.915479   -1342439.933576    -1403587.899880 -61147.966304\n",
-       "4     4      1.649143         7000     0.481082           0  73.801757   -1341877.148806    -1403305.183686 -61428.034880"
+       "    logPrior  time_stats  num_coal    root_ϴ        P_Z_ϴM\n",
+       "0  85.995726    1.490026      7000  0.993342 -62289.508710\n",
+       "1  85.943253    1.540434      7000  1.025140 -61972.086796\n",
+       "2  85.801941    1.567853      7000  1.027326 -61752.584457\n",
+       "3  85.667683    1.585372      7000  1.031189 -61665.005804\n",
+       "4  85.426318    1.717799      7000  1.068754 -60907.063417"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flat_coalescence_stats['P_Z_ϴM'] = flat_coalescence_stats['dataLogLikelihood'] - flat_coalescence_stats['genLogLikelihood']\n",
+    "flat_coalescence_stats = flat_coalescence_stats[['logPrior','coalStatFlat', 'numCoalFlat', 'root_theta', 'genealogyLogLikelihood' ]]\n",
+    "flat_coalescence_stats.columns = ['logPrior','time_stats', 'num_coal', 'root_ϴ', 'P_Z_ϴM' ]\n",
     "flat_coalescence_stats[:5]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 160,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "flat_coalescence_stats['P_Z_ϴM'] = flat_coalescence_stats['dataLogLikelihood'] - flat_coalescence_stats['genLogLikelihood']\n",
-    "flat_coalescence_stats[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
@@ -177,7 +131,7 @@
        "-2407.9120511467941"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,6 +142,111 @@
     "    return result\n",
     "P_Z_ϴM0(2.82063, 7000, 3.442481)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>logPrior</th>\n",
+       "      <th>time_stats</th>\n",
+       "      <th>num_coal</th>\n",
+       "      <th>root_ϴ</th>\n",
+       "      <th>P_Z_ϴM</th>\n",
+       "      <th>P_Z_ϴM0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>79.184578</td>\n",
+       "      <td>2.854285</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>2.448765</td>\n",
+       "      <td>-56646.839272</td>\n",
+       "      <td>-1418.222049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>79.182288</td>\n",
+       "      <td>2.864873</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>2.441710</td>\n",
+       "      <td>-56605.172974</td>\n",
+       "      <td>-1398.033337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>79.505185</td>\n",
+       "      <td>2.799611</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>2.367073</td>\n",
+       "      <td>-56817.236672</td>\n",
+       "      <td>-1180.731663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>79.767757</td>\n",
+       "      <td>2.769587</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>2.285968</td>\n",
+       "      <td>-56920.367575</td>\n",
+       "      <td>-936.708265</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>79.947232</td>\n",
+       "      <td>2.724760</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>2.285968</td>\n",
+       "      <td>-57136.349312</td>\n",
+       "      <td>-936.688655</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     logPrior  time_stats  num_coal    root_ϴ        P_Z_ϴM      P_Z_ϴM0\n",
+       "49  79.184578    2.854285      7000  2.448765 -56646.839272 -1418.222049\n",
+       "48  79.182288    2.864873      7000  2.441710 -56605.172974 -1398.033337\n",
+       "47  79.505185    2.799611      7000  2.367073 -56817.236672 -1180.731663\n",
+       "46  79.767757    2.769587      7000  2.285968 -56920.367575  -936.708265\n",
+       "45  79.947232    2.724760      7000  2.285968 -57136.349312  -936.688655"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "root_ϴ = flat_coalescence_stats['root_ϴ']\n",
+    "num_coal = flat_coalescence_stats['num_coal'] \n",
+    "time_stats = flat_coalescence_stats['time_stats']\n",
+    "flat_coalescence_stats['P_Z_ϴM0'] = P_Z_ϴM0(root_ϴ, num_coal, time_stats)\n",
+    "\n",
+    "flat_coalescence_stats.sort_values(by='P_Z_ϴM0', ascending=True)[:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
