added model_comparison html

--- a/py/model_comparison.ipynb
+++ b/py/model_comparison.ipynb
@@ -207,12 +207,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>logPrior</th>\n",
+       "      <th>time_stats</th>\n",
+       "      <th>num_coal</th>\n",
+       "      <th>root_ϴ</th>\n",
+       "      <th>P_Z_ϴM</th>\n",
+       "      <th>P_Z_ϴM0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>50</td>\n",
+       "      <td>5.000000e+01</td>\n",
+       "      <td>50.000000</td>\n",
+       "      <td>5.000000e+01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>83.038787</td>\n",
+       "      <td>2.138756</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1.517773e-15</td>\n",
+       "      <td>-59294.966049</td>\n",
+       "      <td>-1.446013e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.913607</td>\n",
+       "      <td>0.379364</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4.280834e-16</td>\n",
+       "      <td>1487.498888</td>\n",
+       "      <td>1.396861e+14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>79.182288</td>\n",
+       "      <td>1.490026</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>9.933420e-16</td>\n",
+       "      <td>-62289.508710</td>\n",
+       "      <td>-1.637796e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>81.594005</td>\n",
+       "      <td>1.877373</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1.198437e-15</td>\n",
+       "      <td>-60252.387457</td>\n",
+       "      <td>-1.564578e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>83.408558</td>\n",
+       "      <td>2.093201</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1.375618e-15</td>\n",
+       "      <td>-59386.877261</td>\n",
+       "      <td>-1.498827e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>84.413468</td>\n",
+       "      <td>2.453180</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>1.897094e-15</td>\n",
+       "      <td>-58032.747091</td>\n",
+       "      <td>-1.325688e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>85.995726</td>\n",
+       "      <td>2.864873</td>\n",
+       "      <td>7000</td>\n",
+       "      <td>2.448765e-15</td>\n",
+       "      <td>-56605.172974</td>\n",
+       "      <td>-1.165602e+15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        logPrior  time_stats  num_coal        root_ϴ        P_Z_ϴM       P_Z_ϴM0\n",
+       "count  50.000000   50.000000        50  5.000000e+01     50.000000  5.000000e+01\n",
+       "mean   83.038787    2.138756      7000  1.517773e-15 -59294.966049 -1.446013e+15\n",
+       "std     1.913607    0.379364         0  4.280834e-16   1487.498888  1.396861e+14\n",
+       "min    79.182288    1.490026      7000  9.933420e-16 -62289.508710 -1.637796e+15\n",
+       "25%    81.594005    1.877373      7000  1.198437e-15 -60252.387457 -1.564578e+15\n",
+       "50%    83.408558    2.093201      7000  1.375618e-15 -59386.877261 -1.498827e+15\n",
+       "75%    84.413468    2.453180      7000  1.897094e-15 -58032.747091 -1.325688e+15\n",
+       "max    85.995726    2.864873      7000  2.448765e-15 -56605.172974 -1.165602e+15"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flat_coalescence_stats.describe()"
+   ]
   }
  ],
  "metadata": {
